// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<tr>
  <td
    className="hide-overflow nowrap"
    title="foo"
  >
    foo
  </td>
  <td
    className="hide-overflow thin"
    title="users.tokens.USER_TOKEN"
  >
    users.tokens.USER_TOKEN.short
  </td>
  <td
    className="hide-overflow"
  />
  <td
    className="thin nowrap"
  >
    <DateFromNow
      date="2019-01-18T15:06:33+0100"
      hourPrecision={true}
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    <DateFormatter
      date="2019-01-15T15:06:33+0100"
      long={true}
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    –
  </td>
  <td
    className="thin nowrap text-right"
  >
    <Button
      className="button-red input-small"
      disabled={false}
      onClick={[Function]}
    >
      <DeferredSpinner
        className="little-spacer-right"
        loading={false}
      />
      users.tokens.revoke
    </Button>
  </td>
</tr>
`;

exports[`should render correctly 2`] = `
<tr>
  <td
    className="hide-overflow nowrap"
    title="foo"
  >
    foo
  </td>
  <td
    className="hide-overflow thin"
    title="users.tokens.USER_TOKEN"
  >
    users.tokens.USER_TOKEN.short
  </td>
  <td
    className="hide-overflow"
  />
  <td
    className="thin nowrap"
  >
    <DateFromNow
      date="2019-01-18T15:06:33+0100"
      hourPrecision={true}
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    <DateFormatter
      date="2019-01-15T15:06:33+0100"
      long={true}
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    –
  </td>
  <td
    className="thin nowrap text-right"
  >
    <ConfirmButton
      confirmButtonText="users.tokens.revoke_token"
      isDestructive={true}
      modalBody={
        <FormattedMessage
          defaultMessage="users.tokens.sure_X"
          id="users.tokens.sure_X"
          values={
            {
              "token": <strong>
                foo
              </strong>,
            }
          }
        />
      }
      modalHeader="users.tokens.revoke_token"
      onConfirm={[Function]}
    >
      <Component />
    </ConfirmButton>
  </td>
</tr>
`;

exports[`should revoke the token using inline confirmation 1`] = `
<Button
  className="button-red input-small"
  disabled={false}
  onClick={[Function]}
>
  <DeferredSpinner
    className="little-spacer-right"
    loading={false}
  />
  users.tokens.revoke
</Button>
`;

exports[`should revoke the token using inline confirmation 2`] = `
<Button
  className="button-red input-small"
  disabled={false}
  onClick={[Function]}
>
  <DeferredSpinner
    className="little-spacer-right"
    loading={false}
  />
  users.tokens.sure
</Button>
`;
